# by-your-command

./: .env.example  README.md  init.sh  pyproject.toml
legacy/onboarding_robot/: killandrestartbots
scripts/: bot.sh  update.sh
src/bot/: __init__.py  __main__.py  client.py  config.py  maintenance.py  state.py  utils.py
src/bot/commands/: __init__.py  showmymode.py  tfurl.py
tests/: test_chunk_message.py  test_message_link.py  test_nick_prefix.py  test_showmymode_command.py  test_showmymode_expiry.py  test_showmymode_state.py  test_state.py  test_tfurl_command.py
