# Project metadata and tooling configuration for the `by-your-command` Discord bot.
#
# We use `uv` (https://docs.astral.sh/uv/) to manage the virtual environment and
# dependencies. `uv sync` reads this file plus the committed `uv.lock` to create a
# reproducible `.venv`, and `uv run python -m bot` launches the bot inside it.

[project]
name = "by-your-command"
version = "0.1.0"
description = "A small, modular Discord bot providing the /tfurl and /showmymode slash commands."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    # The Discord API wrapper. 2.4+ has the modern app_commands (slash command) API.
    "discord.py>=2.4",
    # Loads configuration/secrets from a local .env file into the environment.
    "python-dotenv>=1.0",
]

# Console-script entry point: `uv run by-your-command` is equivalent to
# `uv run python -m bot`. The operational scripts use the module form for clarity.
[project.scripts]
by-your-command = "bot.__main__:main"

# Development-only dependencies. `uv sync` installs these by default; a production
# deploy can skip them with `uv sync --no-dev`.
[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

# We ship a `src/` layout, so the build backend needs to be told where the package
# lives. Hatchling is the lightweight, standards-based default.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `import bot.*` resolve from src/ even when the package is not installed,
# so the tests run identically inside or outside the uv-managed environment.
pythonpath = ["src"]
